change to Rabbit Land

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>Rabbits</title>
+            <title>Rabbit Land</title>
             <link rel="stylesheet" href="style.css">
         </head>
         <body>
             <!-- Header -->
             <h1>Rabbits</h1>
             <!--Text-->
-            <p>Use this webpage to learn about Rabbits!</p>
+            <p>Welcome! This is Rabbit Land! Use this webpage to learn about Rabbits!</p>
             <!-- Link -->
             <a href="Food.html">Food</a>
         </body>
